--- a/Msafe/MSafe/res/values/strings.xml
+++ b/Msafe/MSafe/res/values/strings.xml
@@ -20,4 +20,5 @@
         <string name="clear">清理</string>
         <string name="des_filenum">个大文件</string>
         <string name="totalsize_des_exp_fileadmin">共323M</string>
+        <string name="finish">完成</string>
 </resources>
