--- a/Msafe/MSafe/res/values/strings.xml
+++ b/Msafe/MSafe/res/values/strings.xml
@@ -21,4 +21,5 @@
         <string name="des_filenum">个大文件</string>
         <string name="totalsize_des_exp_fileadmin">共323M</string>
         <string name="finish">完成</string>
+        <string name="null_rubbish_txt">没有垃圾占用</string>
 </resources>
