--- a/Msafe/MSafe/res/values/strings.xml
+++ b/Msafe/MSafe/res/values/strings.xml
@@ -22,4 +22,5 @@
         <string name="totalsize_des_exp_fileadmin">共323M</string>
         <string name="finish">完成</string>
         <string name="null_rubbish_txt">没有垃圾占用</string>
+        <string name="scan_txt">  正在扫描轻稍后</string>
 </resources>
