--- a/Msafe/MSafe/res/values/strings.xml
+++ b/Msafe/MSafe/res/values/strings.xml
@@ -23,4 +23,8 @@
         <string name="finish">完成</string>
         <string name="null_rubbish_txt">没有垃圾占用</string>
         <string name="scan_txt">  正在扫描轻稍后</string>
+        <string name="virus_item_check0">恶意应用</string>
+        <string name="virus_item_check1">隐患应用</string>
+        <string name="virus_item_check2">支付风险</string>
+        <string name="virus_item_check3">盗号风险</string>
 </resources>
