--- a/Msafe/MSafe/res/values/strings.xml
+++ b/Msafe/MSafe/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="totalsize_des_exp_fileadmin">共323M</string>
     <string name="finish">完成</string>
     <string name="null_rubbish_txt">没有垃圾占用</string>
-    <string name="scan_txt">  正在扫描轻稍后</string>
+    <string name="scan_txt">正在扫描</string>
     <string name="virus_check_txt0">恶意应用</string>
     <string name="virus_check_txt1">隐患应用</string>
     <string name="virus_check_txt2">支付风险</string>
@@ -74,5 +74,8 @@
     <string name="setting_rubbish_title4">扫描间隔</string>
     <string name="setting_rubbish_title5">扫描时间</string>
     <string name="setting_rubbish_jiantou">></string>
+    
+    <!-- 文件管理 -->
+    <string name="fileadmin_none_sdcard">未插入sdcard，轻稍后再试!</string>
 
 </resources>
