结束了关于获取本地视频缩略图的工作，但是在checkbox本地化的研究中出现动画显示问题等bug 后期工作需要开展动画研究。主要关注点是卡顿之类的

--- a/Msafe/MSafe/res/values/strings.xml
+++ b/Msafe/MSafe/res/values/strings.xml
@@ -61,6 +61,7 @@
     <string name="scan_one">一键检测</string>
     <string name="tanhao">!</string>
     <string name="duihao">√</string>
+    <string name="juhao">。</string>
 
     <!-- 垃圾清理settings属性 -->
     <string name="setting_rubbish_str">设置</string>
