今天工作重点是在完善显示界面上面，搞定了对话框的阴影效果以及后背景颜色透明度，基本上就这些，还有多功能复选的checkbox已经差不多了，后续求优化

--- a/Msafe/MSafe/res/values/strings.xml
+++ b/Msafe/MSafe/res/values/strings.xml
@@ -78,5 +78,12 @@
     
     <!-- 文件管理 -->
     <string name="fileadmin_none_sdcard">未插入sdcard，轻稍后再试!</string>
+    <!-- 文件管理弹出框 -->
+    <string name="fileadmin_pop_filetype0">全部</string>
+    <string name="fileadmin_pop_filetype1">压缩包</string>
+    <string name="fileadmin_pop_filetype2">视频</string>
+    <string name="fileadmin_pop_filetype3">音乐</string>
+    <string name="fileadmin_pop_filetype4">文档</string>
+    <string name="fileadmin_pop_filetype5">其他</string>
 
 </resources>
