--- a/Msafe/MSafe/res/values/strings.xml
+++ b/Msafe/MSafe/res/values/strings.xml
@@ -85,5 +85,9 @@
     <string name="fileadmin_pop_filetype3">音乐</string>
     <string name="fileadmin_pop_filetype4">文档</string>
     <string name="fileadmin_pop_filetype5">其他</string>
-
+    <string name="cancel">取消</string>
+     <string name="delete">删除</string>
+     <string name="source_str">来源 :</string>
+     <string name="modify_time_str">修改时间:</string>
+      <string name="filepath_str">文件路径:</string>
 </resources>
