简单弄完了wap上面的第一个环节，解决了特效btn的一些bug，但是也存在一些问题，比如说surfaceview跳转的卡顿还有可调节进度条适配分辨率问题。之后显示程序流量使用的UI

--- a/Msafe/MSafe/res/values/strings.xml
+++ b/Msafe/MSafe/res/values/strings.xml
@@ -95,4 +95,11 @@
       <string name="zhanyong">占用</string>
       <string name="apktype_title0">时间排序</string>
       <string name="apktype_title1">大小排序</string>
+      <!-- wap Settings设置 -->
+      <string name="wap_setting_title">流量设置</string>
+      <string name="setting_wap_title0">流量监控</string>
+      <string name="setting_wap_title1">基础设置</string>
+      <string name="setting_wap_title2">包月流量</string>
+      <string name="setting_wap_title3">已用流量</string>
+      <string name="setting_wap_title4">流量使用预警值</string>
 </resources>
