start fix and fill with

--- a/Msafe/MSafe/res/values/strings.xml
+++ b/Msafe/MSafe/res/values/strings.xml
@@ -72,7 +72,7 @@
     <string name="setting_rubbish_title7">每天一次</string>
     <string name="setting_rubbish_title8">11:24</string>
     <string name="setting_rubbish_title3">定时扫描</string>
-    <string name="setting_rubbish_title4">扫描间隔</string>
+    <string name="setting_rubbish_title4">包月流量</string>
     <string name="setting_rubbish_title5">扫描时间</string>
     <string name="setting_rubbish_jiantou">></string>
 
